--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -14,7 +14,6 @@
   <header>
     <div class="logo">
       <img src="Imagens/Logo_-_Ocean_Trip-removebg-preview.png" alt="Logo">
-      <h1>Ocean Trip</h1>
     </div>
     <nav>
       <ul>
@@ -27,20 +26,26 @@
       <input type="text" placeholder="Buscar...">
       <button>🔍</button>
     </div>
-      <a href="login-usuarios.php" class="login-icon">
+      <a target="_self" href="http://localhost/sistemas-fornecedores-produtos/sistemas-fornecedores-produtos/login.php" class="login-icon">
         <img src="Imagens/R.png" alt="Login" title="login">
       </a>
     </div>
-  </header>
-
   </header>
 
   <!-- Banner -->
   <section class="banner">
     <div class="banner-images">
       <img src="Imagens/upscalemedia-transformed.png" alt="Cruzeiro 1"></a>
+    </div> 
+    <div class="carrosel">
+      <button class="seta seta-esquerda">❮</button>
+    <img class="esquerda" src="Imagens/844e91ee2d63663dacae60941b92a366abbd29fb.png" alt="">
+    <img class="meio" src="Imagens/4be7751297fc5f511cda6cf97484276ab1f014d7.png" alt="">
+    <img class="direita" src="Imagens/46574b340474b7e56a3246b6204ba277f8e82195.png" alt="">
+    <button class="seta seta-direita">❯</button>
     </div>
-    <h2>Navegue rumo à experiência dos seus sonhos</h2>
+    <h2>Navegue rumo à experiência
+      <br>dos seus sonhos</h2>
   </section>
 
   <!-- Promoções -->
@@ -73,6 +78,7 @@
 
   <!-- Cassino -->
   <section class="cassino">
+        <img src="Imagens/3ce06d8fd3e8c1902e5566fac2cf89cc9c42bb98.png" alt="Cassino">
     <div class="texto">
       <h2>🎰 Cassino a Bordo</h2>
       <p>
@@ -81,12 +87,10 @@
         durante o cruzeiro. Teste sua sorte e viva uma experiência inesquecível!
       </p>
     </div>
-    <img src="Imagens/3ce06d8fd3e8c1902e5566fac2cf89cc9c42bb98.png" alt="Cassino">
   </section>
 
   <!-- Átrio -->
   <section class="atrio">
-    <img src="Imagens/9332a4f566f1afeec53bc57fe77296595f07020e.png" alt="Átrio Principal">
     <div class="texto">
       <h2>⛵ Átrio Principal do Cruzeiro</h2>
       <p>
@@ -95,6 +99,7 @@
         proporcionando uma experiência acolhedora e única.
       </p>
     </div>
+    <img src="Imagens/9332a4f566f1afeec53bc57fe77296595f07020e.png" alt="Átrio Principal">
   </section>
 
   <!-- Rodapé -->
@@ -102,19 +107,19 @@
     <div class="footer-container">
       <div>
         <h4>A Companhia</h4>
-        <p>Sobre a Ocean Trip<br>Trabalhe Conosco<br>Ajuda</p>
+        <p>Sobre a Ocean Trip<br>Sustentabilidade<br>Trabalhe Conosco</p>
       </div>
       <div>
         <h4>Links Úteis</h4>
-        <p>Termos e Condições<br>Política de Privacidade<br>Contato</p>
+        <p>Fale Conosco<br>Reclamações<br>Formas de Pagamento<br>Seguro Viagem</p>
       </div>
       <div>
         <h4>Redes Sociais</h4>
         <p>Instagram<br>Facebook<br>Twitter</p>
       </div>
       <div>
-        <h4>Ocean Trip app</h4>
-        <p>Baixe nosso aplicativo<br>para ofertas exclusivas</p>
+        <h4>Informações Importantes</h4>
+        <p>Perguntas frequentes<br>Carta de direitos de passageiro<br>Melhor preço garantido<br>Política de privacidade</p>
       </div>
     </div>
     <p class="footer-bottom">© 2025 Ocean Trip - Todos os direitos reservados</p>
